<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     >

        <item android:id="@+id/action_map"
            android:title="@string/map"
            android:icon="@drawable/globe_29"
            app:showAsAction="always"
            />
        <item android:id="@+id/action_favourite"
            android:title="@string/favourite"
            android:icon="@drawable/favourite_29"
            app:showAsAction="always"
            />
        <item android:id="@+id/action_email"
            android:icon="@drawable/email_29"
            android:title="@string/email"
            app:showAsAction="always"
            />
        <item android:id="@+id/action_copy"
            android:icon="@drawable/copy_29"
            android:title="@string/copy"
            app:showAsAction="always"
            />
        <item
            android:id="@+id/action_sort"
            android:icon="@drawable/sort_29"
            android:title="@string/sort"
            app:showAsAction="always" />
</menu>